--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^14.1.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
