--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "classnames": "^2.5.1",
     "i18next": "^23.10.1",
     "i18next-http-backend": "^2.5.0",
@@ -26,6 +27,7 @@
     "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-helmet": "^6.1.0",
