--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.0",
     "@mui/x-data-grid": "^7.3.1",
+    "@mui/x-date-pickers": "^7.4.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
