--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^14.1.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
