--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "i18next": "^23.10.1",
     "i18next-http-backend": "^2.5.0",
     "js-cookie": "^3.0.5",
