--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next": "^23.10.1",
     "i18next-http-backend": "^2.5.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
